enhance cmakelists.txt to find headers in subfolders

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,11 @@ set(CMAKE_CXX_STANDARD 17)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 include(FetchDependencies)
 
-file(GLOB EXTRA_SOURCES "./src/*.h" "./src/*.cpp")
-message(${EXTRA_SOURCES})
-add_executable(greedy_construction main.cpp ${EXTRA_SOURCES})
+file(GLOB_RECURSE EXTRA_SOURCES "./src/*.h" "./src/*.cpp")
 
+include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/src
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/utils
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/report
+        )
+add_executable(greedy_construction main.cpp ${EXTRA_SOURCES})
 add_subdirectory(tests)
